// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState Snapshots > EmptyState Base Component > renders default empty state correctly 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No data available
    </h3>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders empty state with both actions 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No results
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      We couldn't find what you're looking for
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Create New
      </button>
      <button
        class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Learn More
      </button>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders empty state with description 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No items found
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Try adding some items to get started
    </p>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders empty state with primary action 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      Empty list
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Get started by adding your first item
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Add Item
      </button>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders with custom icon 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <div
        data-testid="custom-icon"
      >
        🎵
      </div>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      Custom state
    </h3>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders with no-connections illustration 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No connections
    </h3>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders with no-notifications illustration 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      All caught up
    </h3>
  </div>
</div>
`;

exports[`EmptyState Snapshots > EmptyState Base Component > renders with no-results illustration 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No search results
    </h3>
  </div>
</div>
`;

exports[`EmptyState Snapshots > Specialized Empty States > EmptyCatalog renders correctly 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No works in your catalog
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Get started by importing your music catalog from CWR files, CSV, or connect to your PRO.
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Import Catalog
      </button>
      <button
        class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Learn More
      </button>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots > Specialized Empty States > EmptyFindings renders correctly 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No findings yet
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Run a catalog scan to identify potential revenue recovery opportunities and metadata gaps.
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Run Catalog Scan
      </button>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots > Specialized Empty States > EmptyReports renders correctly 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No reports available
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Generate reports to analyze your royalty distribution, revenue trends, and catalog performance.
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Create Report
      </button>
    </div>
  </div>
</div>
`;

exports[`EmptyState Snapshots > Specialized Empty States > NoNotifications renders correctly 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No notifications
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      You're all caught up! We'll notify you when there are important updates.
    </p>
  </div>
</div>
`;

exports[`EmptyState Snapshots > Specialized Empty States > NoSearchResults renders with query 1`] = `
<div>
  <div
    class="text-center py-12 px-4"
  >
    <div
      class="flex justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="w-16 h-16 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-semibold text-gray-900 mb-2"
    >
      No results found for "test song"
    </h3>
    <p
      class="text-gray-600 mb-6 max-w-md mx-auto"
    >
      Try adjusting your search terms or filters to find what you're looking for.
    </p>
    <div
      class="flex flex-col sm:flex-row gap-3 justify-center"
    >
      <button
        class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
      >
        Clear Search
      </button>
    </div>
  </div>
</div>
`;
